syntax = "proto3";

package metrics;

option go_package = "gowatch/gopherwatch/pkg/generated;generated";

service MetricsService {
  rpc SendMetrics(stream MetricReport) returns (Summary);
}

message MetricReport {
  string agent_id = 1;
  int64 timestamp = 2;
  double cpu_usage = 3;
  double memory_usage = 4;
  double disk_usage = 5;
  string service_name = 6;
}

message Summary {
  string message = 1;
}
